--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -230,9 +230,9 @@
             android:id="@+id/userName"
             android:layout_width="76.5dp"
             android:layout_height="28.5dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="150dp"
-            android:text="@string/abc_string"
+            android:layout_marginStart="208dp"
+            android:layout_marginTop="152dp"
+            android:text="user"
             android:textColor="@color/babygage_color"
             android:textSize="11sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -242,9 +242,9 @@
             android:id="@+id/userEmail"
             android:layout_width="140.5dp"
             android:layout_height="34.5dp"
-            android:layout_marginStart="204dp"
+            android:layout_marginStart="208dp"
             android:layout_marginTop="180dp"
-            android:text="@string/_12345678_naver_com_string"
+            android:text="username@naver.com"
             android:textColor="@color/babygage_color"
             android:textSize="11sp"
             app:layout_constraintStart_toStartOf="parent"
