--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,6 +50,10 @@
         android:paddingStart="10dp"
         android:textSize="16dp" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:passwordToggleEnabled="true">
 
     <EditText
         android:id="@+id/userpassword"
@@ -60,7 +64,9 @@
         android:background="@drawable/rectangle_26_shape"
         android:hint="Type your password"
         android:paddingStart="10dp"
-        android:textSize="16dp" />
+        android:textSize="16dp"
+        android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 <!--        app:passwordToggleEnabled="true" >-->
 
 <!--    <com.google.android.material.textfield.TextInputEditText-->
