--- a/app/src/main/res/layout/fragment_financialmain.xml
+++ b/app/src/main/res/layout/fragment_financialmain.xml
@@ -66,78 +66,80 @@
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox"
-            app:layout_constraintHorizontal_bias="0.056"
-            app:layout_constraintStart_toStartOf="@+id/detailBox"
-            app:layout_constraintTop_toTopOf="@+id/detailBox" />
-
-        <TextView
-            android:id="@+id/moneyDetails"
-            android:layout_width="189.5dp"
-            android:layout_height="40.5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="52dp"
-            android:text="Today's expenditure and income"
-            android:textColor="@color/babygage_color"
-            android:textSize="13sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/___expenditure___income"
-            app:layout_constraintHorizontal_bias="0.197"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calendarView" />
-
-        <TextView
-            android:id="@+id/descriptionTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="53dp"
-            android:layout_marginEnd="16dp"
-            android:text=": Expenditure\n: Income"
-            android:textColor="@color/babygage_color"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@+id/detalBox"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calendarView"
-            app:layout_constraintVertical_bias="0.35" />
-
-
-        <!-- this is upload button-->
-
-        <View
-            android:id="@+id/detailBox"
-            android:layout_width="374dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="36dp"
-            android:background="@drawable/rectangle_4_ek1_shape"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/moneyDetails" />
+            app:layout_constraintTop_toBottomOf="@+id/calendarView">
 
-        <!-- this is fixed bottom bar -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/takePictureBtn"
-            android:layout_width="374dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/edge"
-            android:text="Import receipt"
-            android:textColor="@drawable/textcolor"
-            android:textSize="13dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/bottombar"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/detailBox"
-            app:layout_constraintTop_toBottomOf="@+id/detailBox"
-            app:layout_constraintVertical_bias="0.747" />
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="TextView"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox"
+                    app:layout_constraintHorizontal_bias="0.056"
+                    app:layout_constraintStart_toStartOf="@+id/detailBox"
+                    app:layout_constraintTop_toTopOf="@+id/detailBox" />
 
+                <TextView
+                    android:id="@+id/moneyDetails"
+                    android:layout_width="189.5dp"
+                    android:layout_height="40.5dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="52dp"
+                    android:text="Today's expenditure and income"
+                    android:textColor="@color/babygage_color"
+                    android:textSize="13sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/___expenditure___income"
+                    app:layout_constraintHorizontal_bias="0.197"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+
+
+                <!-- this is upload button-->
+
+                <View
+                    android:id="@+id/detailBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="36dp"
+                    android:background="@drawable/rectangle_4_ek1_shape"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.494"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/moneyDetails" />
+
+                <!-- this is fixed bottom bar -->
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/takePictureBtn"
+                    android:layout_width="374dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/edge"
+                    android:text="Import receipt"
+                    android:textColor="@drawable/textcolor"
+                    android:textSize="13dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/bottombar"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox"
+                    app:layout_constraintStart_toStartOf="@+id/detailBox"
+                    app:layout_constraintTop_toBottomOf="@+id/detailBox"
+                    app:layout_constraintVertical_bias="0.747" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
