--- a/app/src/main/res/layout/fragment_householdmain.xml
+++ b/app/src/main/res/layout/fragment_householdmain.xml
@@ -5,11 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HouseholdmainFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
         tools:context=".HouseholdmainActivity">
+
 
         <CalendarView
             android:id="@+id/calendarView"
@@ -95,190 +97,178 @@
         <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox"
-            app:layout_constraintHorizontal_bias="0.056"
-            app:layout_constraintStart_toStartOf="@+id/detailBox"
-            app:layout_constraintTop_toTopOf="@+id/detailBox" />
-
-        <Button
-            android:id="@+id/deletebtn"
-            android:layout_width="70dp"
-            android:layout_height="33dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="4dp"
-            android:backgroundTint="@color/white"
-            android:stateListAnimator="@null"
-            android:text="DELETE"
-            android:textColor="@color/click__color"
-            android:textSize="9dp"
-            app:layout_constraintBottom_toBottomOf="@+id/detailBox2"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox2"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/editbtn"
-            tools:ignore="TouchTargetSizeCheck" />
-
-        <View
-            android:id="@+id/detailBox2"
-            android:layout_width="378dp"
-            android:layout_height="121dp"
-            android:background="@drawable/rectangle_4_shape"
-            app:layout_constraintEnd_toEndOf="@+id/moneyDetails2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/moneyDetails2"
-            app:layout_constraintTop_toBottomOf="@+id/moneyDetails2" />
-
-        <Button
-            android:id="@+id/editbtn"
-            android:layout_width="70dp"
-            android:layout_height="33dp"
-            android:layout_marginEnd="92dp"
-            android:layout_marginBottom="4dp"
-            android:backgroundTint="@color/white"
-            android:stateListAnimator="@null"
-            android:text="EDIT"
-            android:textColor="@color/click__color"
-            android:textSize="10dp"
-            app:layout_constraintBottom_toBottomOf="@+id/detailBox2"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox2"
-            tools:ignore="TouchTargetSizeCheck" />
-
-        <EditText
-            android:id="@+id/diaryEditTxt"
-            android:layout_width="339dp"
-            android:layout_height="37dp"
-            android:hint="Put your text!"
-            android:inputType="textMultiLine"
-            android:textSize="12dp"
-            app:layout_constraintBottom_toTopOf="@+id/editbtn"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox2"
-            app:layout_constraintHorizontal_bias="0.512"
-            app:layout_constraintStart_toStartOf="@+id/detailBox2"
-            app:layout_constraintTop_toTopOf="@+id/detailBox2"
-            app:layout_constraintVertical_bias="0.425"
-            tools:ignore="TouchTargetSizeCheck" />
-
-        <TextView
-            android:id="@+id/moneyDetails"
-            android:layout_width="189.5dp"
-            android:layout_height="40.5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="Today's expenditure and income"
-            android:textColor="@color/babygage_color"
-            android:textSize="13sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/___expenditure___income"
-            app:layout_constraintHorizontal_bias="0.197"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calendarView" />
-
-        <TextView
-            android:id="@+id/moneyDetails2"
-            android:layout_width="189.5dp"
-            android:layout_height="40.5dp"
-            android:layout_marginTop="12dp"
-            android:text="Today's diary"
-            android:textColor="@color/babygage_color"
-            android:textSize="13sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/detailBox"
-            app:layout_constraintTop_toBottomOf="@+id/detailBox" />
-
-        <Button
-            android:id="@+id/savebtn"
-            android:layout_width="70dp"
-            android:layout_height="33dp"
-            android:layout_marginEnd="48dp"
-            android:layout_marginBottom="4dp"
-            android:backgroundTint="@color/white"
-            android:stateListAnimator="@null"
-            android:text="SAVE"
-            android:textColor="@color/click__color"
-            android:textSize="10dp"
-            app:layout_constraintBottom_toBottomOf="@+id/detailBox2"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox2"
-            tools:ignore="TouchTargetSizeCheck" />
-
-        <TextView
-            android:id="@+id/diary"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintBottom_toBottomOf="@+id/diaryTxt"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox2"
-            app:layout_constraintHorizontal_bias="0.512"
-            app:layout_constraintStart_toStartOf="@+id/detailBox2"
-            app:layout_constraintTop_toTopOf="@+id/detailBox2"
-            app:layout_constraintVertical_bias="0.555" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/importReceipt"
-            android:layout_width="374dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/edge2"
-            android:text="Import receipt"
-            android:textColor="@color/rectangle_5_color"
-            android:textSize="13dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/bottombar"
-            app:layout_constraintEnd_toEndOf="@+id/detailBox"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/detailBox"
-            app:layout_constraintTop_toBottomOf="@+id/detailBox2"
-            app:layout_constraintVertical_bias="0.747" />
-
-        <View
-            android:id="@+id/detailBox"
-            android:layout_width="379dp"
-            android:layout_height="49dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="60dp"
-            android:background="@drawable/rectangle_4_shape"
-            app:layout_constraintBottom_toTopOf="@+id/bottombar"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="24dp"
+            android:layout_weight="1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/today_s_expenditure_details_ek1"
-            app:layout_constraintTop_toBottomOf="@+id/moneyDetails"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/calendarView">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <!--    OCR (사진 첨부 부분) -->
-        <!--    <Button-->
-        <!--        android:id="@+id/takePictureBtn"-->
-        <!--        android:layout_width="wrap_content"-->
-        <!--        android:layout_height="40dp"-->
-        <!--        android:alpha="0.60000002384186"-->
-        <!--        android:background="@drawable/_rectangle_15_shape"-->
-        <!--        android:text="take a picture"-->
-        <!--        android:textColor="#000000"-->
-        <!--        android:textSize="13dp"-->
-        <!--        app:backgroundTint="@color/_rectangle_50_color"-->
-        <!--        tools:layout_editor_absoluteX="272dp"—>
-        <!—        tools:layout_editor_absoluteY="588dp" />—>
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="TextView"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox"
+                    app:layout_constraintHorizontal_bias="0.056"
+                    app:layout_constraintStart_toStartOf="@+id/detailBox"
+                    app:layout_constraintTop_toTopOf="@+id/detailBox" />
 
-        <!—    <Button—>
-        <!—        android:id="@+id/importGalleryBtn"—>
-        <!—        android:layout_width="wrap_content"—>
-        <!—        android:layout_height="40dp"—>
-        <!—        android:alpha="0.60000002384186"—>
-        <!—        android:background="@drawable/rectangle_14_ek1_shape"—>
-        <!—        android:text="import from gallery"—>
-        <!—        android:textColor="#000000"—>
-        <!—        android:textSize="13dp"—>
-        <!—        app:backgroundTint="@color/_rectangle_50_color"—>
-        <!—        tools:layout_editor_absoluteX="22dp"—>
-        <!—        tools:layout_editor_absoluteY="588dp" />
-        -->
+                <Button
+                    android:id="@+id/deletebtn"
+                    android:layout_width="70dp"
+                    android:layout_height="33dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginBottom="4dp"
+                    android:backgroundTint="@color/white"
+                    android:text="DELETE"
+                    android:textColor="@color/click__color"
+                    android:textSize="9dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/detailBox2"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox2"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toEndOf="@+id/editbtn"
+                    tools:ignore="TouchTargetSizeCheck" />
 
+                <View
+                    android:id="@+id/detailBox2"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:background="@drawable/rectangle_4_shape"
+                    app:layout_constraintEnd_toEndOf="@+id/moneyDetails2"
+                    app:layout_constraintHorizontal_bias="0.084"
+                    app:layout_constraintStart_toStartOf="@+id/moneyDetails2"
+                    app:layout_constraintTop_toBottomOf="@+id/moneyDetails2" />
+
+                <Button
+                    android:id="@+id/editbtn"
+                    android:layout_width="70dp"
+                    android:layout_height="33dp"
+                    android:layout_marginEnd="92dp"
+                    android:layout_marginBottom="4dp"
+                    android:backgroundTint="@color/white"
+                    android:stateListAnimator="@null"
+                    android:text="EDIT"
+                    android:textColor="@color/click__color"
+                    android:textSize="10dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/detailBox2"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox2"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                <EditText
+                    android:id="@+id/diaryEditTxt"
+                    android:layout_width="339dp"
+                    android:layout_height="37dp"
+                    android:hint="Put your text!"
+                    android:inputType="textMultiLine"
+                    android:textSize="12dp"
+                    app:layout_constraintBottom_toTopOf="@+id/editbtn"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox2"
+                    app:layout_constraintHorizontal_bias="0.512"
+                    app:layout_constraintStart_toStartOf="@+id/detailBox2"
+                    app:layout_constraintTop_toTopOf="@+id/detailBox2"
+                    app:layout_constraintVertical_bias="0.425"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                <TextView
+                    android:id="@+id/moneyDetails"
+                    android:layout_width="189.5dp"
+                    android:layout_height="40.5dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Today's expenditure and income"
+                    android:textColor="@color/babygage_color"
+                    android:textSize="13sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/___expenditure___income"
+                    app:layout_constraintHorizontal_bias="0.197"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+
+                <TextView
+                    android:id="@+id/moneyDetails2"
+                    android:layout_width="189.5dp"
+                    android:layout_height="40.5dp"
+                    android:layout_marginTop="12dp"
+                    android:text="Today's diary"
+                    android:textColor="@color/babygage_color"
+                    android:textSize="13sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@+id/moneyDetails"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="@+id/moneyDetails"
+                    app:layout_constraintTop_toBottomOf="@+id/detailBox" />
+
+                <Button
+                    android:id="@+id/savebtn"
+                    android:layout_width="70dp"
+                    android:layout_height="33dp"
+                    android:layout_marginEnd="48dp"
+                    android:layout_marginBottom="4dp"
+                    android:backgroundTint="@color/white"
+                    android:stateListAnimator="@null"
+                    android:text="SAVE"
+                    android:textColor="@color/click__color"
+                    android:textSize="10dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/detailBox2"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox2"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                <TextView
+                    android:id="@+id/diary"
+                    android:layout_width="339dp"
+                    android:layout_height="21dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/diaryTxt"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox2"
+                    app:layout_constraintHorizontal_bias="0.512"
+                    app:layout_constraintStart_toStartOf="@+id/detailBox2"
+                    app:layout_constraintTop_toTopOf="@+id/detailBox2"
+                    app:layout_constraintVertical_bias="0.555" />
+
+                <View
+                    android:id="@+id/detailBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="46dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="60dp"
+                    android:background="@drawable/rectangle_4_shape"
+                    app:layout_constraintBottom_toTopOf="@+id/bottombar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/today_s_expenditure_details_ek1"
+                    app:layout_constraintTop_toBottomOf="@+id/moneyDetails"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/importReceipt"
+                    android:layout_width="374dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/edge2"
+                    android:text="Import receipt"
+                    android:textColor="@color/rectangle_5_color"
+                    android:textSize="13dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.486"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/detailBox2"
+                    app:layout_constraintVertical_bias="0.656" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
