--- a/app/src/main/res/layout/activity_financial_mypage.xml
+++ b/app/src/main/res/layout/activity_financial_mypage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,7 +14,6 @@
         android:layout_marginBottom="240dp"
         android:background="@color/_bg__intro_ek2_color"
         android:gravity="top"
-        app:layout_constraintBottom_toTopOf="@+id/iv_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,18 +62,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="21.01dp"
-        android:layout_marginTop="67dp"
-
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginStart="16dp"
+android:layout_marginTop="10dp"
         android:text="Financial Audit My Page"
         android:textColor="@color/babygage_color"
         android:textSize="14dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/lin" />
 
     <View
         android:layout_width="180.03dp"
@@ -93,14 +88,18 @@
 
     <TableLayout
 
+        android:id="@+id/tableLayout3"
         android:layout_width="match_parent"
-        android:layout_height="31dp"
-        android:layout_below="@+id/view"
+        android:layout_height="wrap_content"
+
 
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="543dp"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/itemList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/financial_my2"
+        app:layout_constraintVertical_bias="1.0">
         <!-- Table Heading-->
         <TableRow android:background="@color/teal_200">
 
@@ -109,10 +108,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:gravity="center_horizontal"
-                android:padding="10sp"
                 android:text="Date"
+                android:padding="10dp"
                 android:textColor="@android:color/white"
-                android:textSize="10sp">
+                android:textSize="12sp">
 
             </TextView>
 
@@ -121,10 +120,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:gravity="center_horizontal"
-                android:padding="10sp"
+                android:padding="10dp"
                 android:text="Product Name"
                 android:textColor="@android:color/white"
-                android:textSize="10sp">
+                android:textSize="12dp">
 
             </TextView>
 
@@ -133,10 +132,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:gravity="center_horizontal"
-                android:padding="10sp"
+                android:padding="10dp"
                 android:text="Total Price"
                 android:textColor="@android:color/white"
-                android:textSize="10sp">
+                android:textSize="12dp">
 
             </TextView>
 
@@ -148,6 +147,7 @@
 
     </TableLayout>
 
+
     <TextView
         android:id="@+id/financial_my2"
         android:layout_width="177.5dp"
@@ -155,92 +155,34 @@
         android:layout_below="@+id/lin"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginLeft="21.01dp"
 
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="40dp"
         android:text="Financial Audit Table"
         android:textColor="@color/babygage_color"
         android:textSize="14dp"
         android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/itemList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.098"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="180.03dp"
-        android:layout_height="1dp"
-        android:layout_below="@+id/financial_my"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="198dp"
-        android:layout_marginEnd="236dp"
-        android:background="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="27dp"
-        android:layout_marginBottom="400dp">
-
-        <TableRow>
-
-            <TextView
-                android:id="@+id/row_text_result"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:gravity="center_horizontal"
-                android:padding="10sp"
-                android:text=""
-                android:textSize="12sp"></TextView>
-
-            <TextView
-                android:id="@+id/row_text_result2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:gravity="center_horizontal"
-                android:padding="10sp"
-                android:text="@string/row1Age"
-                android:textSize="12sp"></TextView>
-
-            <TextView
-                android:id="@+id/row_text_result3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:gravity="center_horizontal"
-                android:padding="10sp"
-                android:text="@string/row1SurName"
-                android:textSize="12sp"></TextView>
-
-
-        </TableRow>
-    </TableLayout>
-
+        app:layout_constraintTop_toBottomOf="@+id/lin"
+        app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
         android:id="@+id/lin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/parent"
-        android:layout_marginBottom="0dp"
+
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="407dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="120dp"
             android:layout_height="match_parent"
+            android:layout_marginTop="50dp"
             android:orientation="horizontal">
 
             <TextView
@@ -353,14 +295,31 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/itemList"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_above="@+id/parent"
-        android:layout_below="@+id/parent"
-        android:layout_marginTop="362dp"
-        android:layout_marginBottom="0dp"
+        android:layout_height="300dp"
+
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lin"
+        app:layout_constraintVertical_bias="0.38"
         tools:listitem="@layout/recycler_financial_list_view" />
 
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:backgroundTint="@color/teal_200"
+        android:gravity="center"
+        android:text="ExcelSave"
+        app:iconTint="@color/click__color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/itemList"
+        app:layout_constraintVertical_bias="0.19" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
