--- a/app/src/main/res/layout/activity_financialmain.xml
+++ b/app/src/main/res/layout/activity_financialmain.xml
@@ -88,21 +88,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
+
+    <!-- this is upload button-->
+
     <TextView
         android:id="@+id/descriptionTxt"
         android:layout_width="wrap_content"
         android:layout_height="53dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="76dp"
         android:text=": Expenditure\n: Income"
         android:textColor="@color/babygage_color"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/detalBox"
+        app:layout_constraintBottom_toTopOf="@+id/detailBox"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.914"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView"
-        app:layout_constraintVertical_bias="0.35" />
-
-
-    <!-- this is upload button-->
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:id="@+id/detailBox"
@@ -124,7 +126,7 @@
         android:layout_marginTop="44dp"
         android:background="@drawable/edge"
         android:text="Import receipt"
-        android:textColor="@drawable/textcolor"
+        android:textColor="@color/bluemint"
         android:textSize="13dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bottombar"
