--- a/app/src/main/res/layout/activity_financial_mypage.xml
+++ b/app/src/main/res/layout/activity_financial_mypage.xml
@@ -14,7 +14,6 @@
         android:layout_marginBottom="240dp"
         android:background="@color/_bg__intro_ek2_color"
         android:gravity="top"
-        app:layout_constraintBottom_toTopOf="@+id/iv_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,8 +81,6 @@
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="31dp"
-
-        android:layout_below="@+id/view"
         android:layout_alignParentBottom="true"
         android:background="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/itemList"
@@ -141,7 +138,6 @@
         android:id="@+id/lin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/parent"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:layout_editor_absoluteX="0dp">
@@ -265,8 +261,6 @@
         android:id="@+id/itemList"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_above="@+id/parent"
-        android:layout_below="@+id/parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lin"
         app:layout_constraintVertical_bias="0.29000002"
@@ -292,6 +286,7 @@
         app:layout_constraintVertical_bias="0.886" />
 
     <Button
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -303,6 +298,24 @@
         app:layout_constraintEnd_toEndOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemList"
-        app:layout_constraintVertical_bias="0.324" />
+        app:layout_constraintVertical_bias="0.135" />
+
+    <Button
+        android:id="@+id/barchart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/rectangle_52_ek1_shape"
+        android:backgroundTint="#87ceeb"
+        app:backgroundTint="@color/rectangle_5_ek1_color"
+        android:text="Go to Chart Dashboard !"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/button3"
+        app:layout_constraintStart_toStartOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
