--- a/app/src/main/res/layout/fragment_financialmain.xml
+++ b/app/src/main/res/layout/fragment_financialmain.xml
@@ -26,7 +26,6 @@
             android:layout_marginBottom="240dp"
             android:background="@color/_bg__intro_ek2_color"
             android:gravity="top"
-            app:layout_constraintBottom_toTopOf="@+id/iv_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,23 +90,21 @@
                     app:layout_constraintStart_toStartOf="@+id/detailBox"
                     app:layout_constraintTop_toTopOf="@+id/detailBox" />
 
+
+                <!-- this is upload button-->
+
                 <TextView
                     android:id="@+id/moneyDetails"
                     android:layout_width="189.5dp"
                     android:layout_height="40.5dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="52dp"
+                    android:layout_marginTop="16dp"
                     android:text="Today's expenditure and income"
                     android:textColor="@color/babygage_color"
                     android:textSize="13sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/___expenditure___income"
-                    app:layout_constraintHorizontal_bias="0.197"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/calendarView" />
-
-
-                <!-- this is upload button-->
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <View
                     android:id="@+id/detailBox"
@@ -132,7 +129,6 @@
                     android:textColor="@drawable/textcolor"
                     android:textSize="13dp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@+id/bottombar"
                     app:layout_constraintEnd_toEndOf="@+id/detailBox"
                     app:layout_constraintStart_toStartOf="@+id/detailBox"
                     app:layout_constraintTop_toBottomOf="@+id/detailBox"
